hrstayto@mtu.edu 4.16.2025 added autobet button (backlogged / needs refactoring) added setBet functionality to UI
if any bugs are found / any changes are needed
message me @
hrstayto@mtu.edu
(810) 494 1122