@@ -6,12 +6,12 @@ import javafx.animation.KeyFrame;
 import javafx.animation.Timeline;
 import javafx.fxml.FXML;
 import javafx.scene.control.Button;
+import javafx.scene.control.CheckBox;
 import javafx.scene.control.Label;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.HBox;
-import javafx.scene.layout.Priority;
 import javafx.scene.shape.Polygon;
 import javafx.scene.text.TextAlignment;
 import javafx.util.Duration;
@@ -19,69 +19,101 @@ import javafx.util.Duration;
 import java.io.File;
 import java.util.List;
 
+/*
+* Controller for PleaseBe21 UI
+* Handles all user input, game interactions, and such
+ */
 public class GameController {
-    private BlackJackGame blackJackGame;
-    private boolean revealedCards;
-    private String currentCardBack = ""; //to change card, go to selectedCardBack in MainController.
-    @FXML
-    private Button hitButton, stayButton, restartButton, hintButton, splitButton, tipDealerButton;
+    // -----main game components-----
+    private BlackJackGame blackJackGame;    // game logic
+    private boolean revealedCards;          // checks if dealer has shown all cards
+    private String currentCardBack = "";    // current back of card
+    private boolean autoBetEnabled = false; // default autobet is at false
 
-    @FXML
-    private Button previousHandButton, nextHandButton;
-    @FXML
-    private Label currentHandLabel, unplayedHandLabel, countLabel;
+    // -----UI game components-----
+    // game action buttons
+    @FXML private Button hitButton, stayButton, restartButton, hintButton, splitButton, tipDealerButton;
+    // split integration
+    @FXML private Button previousHandButton, nextHandButton;
+    @FXML private Label currentHandLabel, unplayedHandLabel;
 
-    @FXML
-    private Label resultLabel, hintLabel, playerValueLabel, dealerValueLabel, currencyLabel, betLabel, tipAmountLabel;
+    // game status labels
+    @FXML private Label resultLabel, hintLabel, playerValueLabel, dealerValueLabel, currencyLabel, betLabel, tipAmountLabel, countLabel;
 
-    @FXML
-    private HBox playerCardImageBox, dealerCardImageBox;
-    @FXML
-    AnchorPane  mainPane, topPane, bottomPane;
+    // card display boxes
+    @FXML private HBox playerCardImageBox, dealerCardImageBox;
 
-    @FXML
-    Polygon increaseTipButton, decreaseTipButton;
+    // layout containers
+    @FXML AnchorPane mainPane, topPane, bottomPane;
 
-    public void initialize() {
-        initializeCardsUI();
-        currencyLabel.setText(blackJackGame.getCurrency());
-        splitButton.setVisible(blackJackGame.splitabilibity());
-    }
+    // tip controls
+    @FXML Polygon increaseTipButton, decreaseTipButton;
 
+    // Auto-bet toggle
+    @FXML private CheckBox autoBetCheckBox;
+
+    /**
+     * Constructor including a game reference
+     */
     public GameController(BlackJackGame blackJackGame) {
         this.blackJackGame = blackJackGame;
     }
 
+    /**
+     * Empty constructor for TutorialController
+     */
     public GameController() {
         // Empty Constructor for TutorialController
     }
+    /*
+    init game UI
+     */
+    public void initialize() {
+        //start initial card display
+        initializeCardsUI();
+        //show cards, currency, bet amount, and split button if criteria met
+        currencyLabel.setText(blackJackGame.getCurrency());
+        betLabel.setText(Double.toString(blackJackGame.getBank().getBet()));
+        hitButton.setDisable(blackJackGame.getPlayerHandValue() >= 21);
+        splitButton.setVisible(blackJackGame.splitabilibity());
 
-
+        if(blackJackGame.isRoundOver()){
+            stayButton.setDisable(true);
+            hitButton.setDisable(true);
+            restartButton.setDisable(true);
+            resultLabel.setText(blackJackGame.getResult());
+        }
+    }
+    //GAME FLOW
     @FXML
     protected void onHit() {
         splitButton.setVisible(false);
         if (blackJackGame.hitPlayer()) {
-             stayButton.setDisable(true);
-             hitButton.setDisable(true);
+            //  hit button off if player has 21 or more
+            if (blackJackGame.getPlayerHandValue() >= 21) {
+                hitButton.setDisable(true);
+            }
+
+            stayButton.setDisable(blackJackGame.isRoundOver());
         }
 
         loadPNG(playerCardImageBox, blackJackGame.recentCardRank() + blackJackGame.recentCardSuit());
         playerValueLabel.setText(Integer.toString(blackJackGame.getPlayerHandValue()));
-        resultLabel.setText(blackJackGame.getResult());
 
         if (blackJackGame.dealerHasPlayed()) {
             revealDealerCards();
-        }
+        } else {
+            resultLabel.setText(blackJackGame.getResult());
 
-        if (blackJackGame.isRoundOver()) {
-            restartButton.setVisible(true);
+            if (blackJackGame.isRoundOver()) {
+                handleRoundEnd();
+            }
         }
-
     }
 
     @FXML
-    protected void onStay() {
-        if (blackJackGame.playerStays()) {
+    protected  void onStay(){
+        if(blackJackGame.playerStays()){
             blackJackGame.nextSplitHand();
             loadHand();
             initializeCardsUI();
@@ -112,7 +144,7 @@ public class GameController {
     protected void revealDealerCards() {
         revealedCards = true;
         List<String> dealerCardNames = blackJackGame.getDealerCardNames();
-        dealerCardImageBox.getChildren().removeLast();
+        dealerCardImageBox.getChildren().remove(dealerCardImageBox.getChildren().size() - 1);
         int dealerValue = blackJackGame.getDealerUpCardValue();
 
         for (int i = 1; i < dealerCardNames.size(); i++) {
@@ -120,16 +152,13 @@ public class GameController {
             dealerValue += blackJackGame.getDealerCardValue(i);
             final String stringHandValue = Integer.toString(dealerValue);
             int j = i;
-            // Create a Timeline to run the image loading with a delay
             Timeline timeline = new Timeline(
                     new KeyFrame(Duration.seconds(i), event -> {
                         loadPNG(dealerCardImageBox, dealerCardNames.get(j));
                         dealerValueLabel.setText(stringHandValue);
                     }),
                     new KeyFrame(Duration.seconds(dealerCardNames.size()), event -> {
-                        resultLabel.setText(blackJackGame.getResult());
-                        restartButton.setVisible(true);
-                        currencyLabel.setText(blackJackGame.getCurrency());
+                        handleRoundEnd();
                     })
             );
 
@@ -137,11 +166,43 @@ public class GameController {
             timeline.play();
         }
     }
+    private void handleRoundEnd() {
+        resultLabel.setText(blackJackGame.getResult());
+        currencyLabel.setText(blackJackGame.getCurrency());
+
+        if (autoBetEnabled && Double.parseDouble(blackJackGame.getCurrency()) >= blackJackGame.getBank().getBet()) {
+            Timeline autoPlayTimeline = new Timeline(
+                    new KeyFrame(Duration.seconds(2.5), event -> {
+                        revealedCards = false;
+                        blackJackGame.initRound(true);
+                        initializeCardsUI();
+                        hitButton.setDisable(false);
+                        stayButton.setDisable(false);
+                        hintLabel.setText("");
+                        resultLabel.setText("");
+                        playerCardImageBox.setLayoutX(216);
+                        dealerCardImageBox.setLayoutX(216);
+                        restartButton.setVisible(false);
+                        currencyLabel.setText(blackJackGame.getCurrency());
+                        previousHandButton.setVisible(false);
+                        nextHandButton.setVisible(false);
+                        currentHandLabel.setVisible(false);
+                        splitButton.setVisible(blackJackGame.splitabilibity());
+                        splitButton.setDisable(!blackJackGame.splitabilibity());
+                    })
+            );
+            autoPlayTimeline.setCycleCount(1);
+            autoPlayTimeline.play();
+        } else {
+            restartButton.setVisible(true);
+        }
+    }
+
 
     public void setCardBack(String cardBackDesign) {
         this.currentCardBack = cardBackDesign;// refresh the UI to show the new card back
         if (!revealedCards && dealerCardImageBox.getChildren().size() > 1) {
-            dealerCardImageBox.getChildren().removeLast();
+            dealerCardImageBox.getChildren().remove(dealerCardImageBox.getChildren().size() - 1);
             loadPNG(dealerCardImageBox, currentCardBack);
         }
     }
@@ -166,10 +227,11 @@ public class GameController {
     }
 
 
+    //4.14.2025 new addition checks if autobet should continue after a round is over
     @FXML
     protected void onRestart() {
         revealedCards = false;
-        blackJackGame.initRound();
+        blackJackGame.initRound(false);
         initializeCardsUI();
         hitButton.setDisable(false);
         stayButton.setDisable(false);
@@ -186,7 +248,6 @@ public class GameController {
         currentHandLabel.setVisible(false);
         splitButton.setVisible(blackJackGame.splitabilibity());
         splitButton.setDisable(!blackJackGame.splitabilibity());
-
     }
 
     @FXML
@@ -230,19 +291,28 @@ public class GameController {
         tipAmount -= 5;
         tipAmountLabel.setText(Integer.toString(tipAmount));
     }
-    @FXML
-    protected void increaseBet(){
-        double betAmount = Double.parseDouble(betLabel.getText());
-        betAmount+= 5;
-        betLabel.setText(Double.toString(betAmount));
-    }
-    @FXML
-    protected void decreaseBet(){
-        double betAmount = Double.parseDouble(betLabel.getText());
-        betAmount-= 5;
-        betLabel.setText(Double.toString(betAmount));
+
+    @FXML void onAutoBetToggle(){
+        autoBetEnabled = autoBetCheckBox.isSelected();
     }
 
+    @FXML
+    protected void increaseBet() {
+        double betAmount = Double.parseDouble(betLabel.getText());
+        betAmount += 5;
+        betLabel.setText(Double.toString(betAmount));
+        blackJackGame.getBank().setBet(betAmount);
+    }
+
+    @FXML
+    protected void decreaseBet() {
+        double betAmount = Double.parseDouble(betLabel.getText());
+        if (betAmount > 5) { //stops negative or zero bets
+            betAmount -= 5;
+            betLabel.setText(Double.toString(betAmount));
+            blackJackGame.getBank().setBet(betAmount);
+        }
+    }
     @FXML
     protected void tipDealer() {
         blackJackGame.tipDealer(Integer.parseInt(tipAmountLabel.getText()));
